extends Control

@export var LevelValue: Label
@export var MainStatsMaxValues: Label
@export var MainStatsValues: Label
@export var StatusValue: Label
@export var SubStatValues: Label
@export var BattleStatsValues: Label
@export var ResourcesValues: Label
@export var TimeValue: Label
@export var SubArrows: RichTextLabel
@export var BattleArrows: RichTextLabel
@export var NewSubStats: RichTextLabel
@export var NewBattleStats: RichTextLabel
